<resources>
    <string name="app_name">Covid-19 Self Test</string>
    <string name="headline">Help Stop The Spread of Covid-19.\n Get Yourself Tested Today</string>
    <string name="test_record_btn">VIEW PREVOIUS TEST RECORDS</string>
    <string name="online_statistics">CURRENT NCDC STATISTICS</string>
    <string name="hello">Welcome! Take a few minutes to answer a few questions to help us determine
        your possible Covid-19 status. Please note that the result produced is only a symptom analysis
        result based on the answers you provided and does not satisfactorily determine your Covid-19 status.
        This self assessment tool serves only for informational purposes and should not be regarded as a medical diagnosis
    </string>
    <string name="name">Full Name</string>
    <string name="date_of_birth">Date of Birth (DD/MM/YYYY)</string>
    <string name="states">List of states for the user to select from</string>
    <string name="health_complication">Do you have any health complications?</string>
    <string name="yes_button">Yes</string>
    <string name="no_button">No</string>
    <string name="if_yes">If \"Yes\" please type the health complication in the box below.
        This will help us analyse your health condition better.</string>
    <string name="health">Type your health condition</string>
    <string name="symptoms">Thick all the symptoms that applies to you currently.</string>
    <string name="fever">High Fever</string>
    <string name="dry_cough">Dry Cough</string>
    <string name="loss_of_taste">Loss of Taste of Smell</string>
    <string name="tiredness">Tiredness of Fatigue</string>
    <string name="difficulty_breathing">Difficulty breathing or shortness of breath</string>
    <string name="chest_pain_or_pressure">Chest pain or Pressure</string>
    <string name="loss_of_speech">Loss of speech or movement</string>
    <string name="sore_throat">Sore throat or runny nose</string>
    <string name="end_note">Note: The symptoms listed above are the major symptoms we need for our
        assessment. It is limited and does not consist of all the possible symptoms associated with
        Covid-19.</string>
    <string name="submit_test">Submit Test</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="user_header">User Details</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="difficulty_in_breathing">Difficulty in breathing</string>
    <string name="chest_pain">Chest Pain</string>
    <string name="speech_loss">Speech Loss</string>
    <string name="item_row_icon">item row icon</string>
    <string name="positive_recommendation">We strongly recommend that you should consult the
        NCDC immediately. You can forward your assessment result to the NCDC by clicking the
        "FORWARD RESULT TO NCDC" button below, for further action.</string>
    <string name="positive">Most likely positive</string>
    <string name="less_likely_positive_recommend">Your symptoms seems to be less serious but we do
        recommend that you contact the nearest medical facility for medical test. You can
        as well forward your assessment result to the NCDC by clicking the \"FORWARD RESULT TO
        NCDC\" button below.</string>
    <string name="likely_positive">Likely Positive</string>
    <string name="negative">Likely Negative</string>
    <string name="negative_recommendation">You don\'t seem to have a enough symptoms that could suggest having COVID-19.
    However we recommend that you visit a medical facility for medical test if symptoms persist or worsens</string>
    <string name="hello_user">Hello user</string>
    <string name="result_summary">This is the summary of your test based on the symptoms you indicated as positive:</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="statistics_intro">REALTIME RECORD OF COVID-19 CASES IN NIGERIA</string>
    <string name="breakdown">BREAKDOWN OF CASES BY STATES</string>
    <string name="total_samples">Total Samples Tested:  </string>
    <string name="total_confirmed">Total Confirmed Cases:  </string>
    <string name="active_cases">Total Active Cases:  </string>
    <string name="total_discharged">Discharged:  </string>
    <string name="total_deaths">Total Deaths:  </string>
    <string name="send_result">FORWARD RESULT TO NCDC</string>
    <string name="take_test">Image button for navigating to Test Activity</string>
    <string name="follow_us_on_twitter">Follow us on Twitter</string>
    <string name="like_us_on_facebook">Like us on Facebook</string>
    <string name="follow_us_on_linkedin">Follow us on LinkedIn</string>
    <string name="privacy">Privacy Policy</string>
    <string name="about_us">About us</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="privacy_policy">Charlyco Technologies Privacy Policy \n \n
       Effective Date: June 30, 2020 \n \n
        This policy explains what information we collect when you use the Covid-19 Self-assessment mobile app.
        It also has information about how we store, use, transfer, and delete that information. \n \n

        Information We Collect &amp; How We Use It \n
        Due to the nature of the Covid-19 Self-assessment mobile app,
        you are required to input your name, state of resident and date of birth. These information
        are not used by our algorithm in anyway, however, we collect that since they are required for
        contact and evaluation by Nigeria Center for Disease Control (NCDC) in a case you decide to forward
        the assessment result generated by our app to NCDC. \n \n

        Information Disclosure \n
        Charlyco Technologies will not transfer information about you to third parties for the purpose of providing or facilitating
        third-party advertising to you. We won’t sell information about you to a third-party.
        The information we gather through the app is only transferred through your email account linked
        to your device to the official contact email address of the Nigeria Center for Disease Control. \n \n

        Data Storage \n
        Every data gathered through the taking a self-assessment test or any other user interaction with
        this mobile application is stored entirely locally on the user’s device. \n \n

        Modifying or Deleting \n
        Your Personal Information   If you decide to delete a test result on your device, the entire
        information related to that particular test, including the indicated symptoms and personal data
        are deleted.\n \n

        Data Security \n
        Since we do not transfer you data directly to the NCDC, the
        security of your data is determined by the security architecture of the email client you used. \n \n

        Changes to this Policy \n
        Charlyco Technologies may periodically update this Policy is the architecture or algorithms
        of this app changes in a way that warrants an update to this policy. We’ll notify you about
        significant changes to it. The most current version of the policy will always be bundled with the
        latest version of the app. Hence the privacy policy bundled with any version of this app is specific
        to that version of the app. \n \n
        Questions \n
        We welcome feedback about this policy at charlyco84@yahoo.com \n
        Phone: +2347037590923 </string>
    <string name="about_us_writup">
        The community made me and I am glad to give back to the community.\n\n
        This mobile application is built as my contribution to the Andela Community Projects for the
        2020 Google Africa Developer Scholarship program.\n\n
        I am forever grateful to Andela Learning Community, Google Africa and Pluralsight for the
        opportunity to develop a career out of my passion.\n\n

        Email: theyoungeng1@gmail.com\n
        Phone: +2347037590923 </string>
    <string name="zero">000</string>
    <string name="state_name">Name of State</string>
    <string name="covidAdvice">COVID-19 SAFETY GUIDLINES</string>
    <string name="safety_guidelines">Safety Guidelines</string>
    <string name="take_test_button">TAKE A QUICK SELF EXAMINATION</string>
    <string name="safety_guide_btn">NCDC / WHO SAFETY GUIDELINE</string>
    <string name="wear_mask">WEAR A MASK WHENEVER NECESSARY</string>
    <string name="social_distancing">OBSERVE SOCIAL DISTANCING</string>
    <string name="wash_hand">WASH YOUR HANDS ALWAYS</string>
    <string name="cover_coughs">COVER COUGHS AND SNEEZES</string>
    <string name="good_hygiene">PRACTICE GOOD HYGIENE</string>
    <string name="monitor_health">MONITOR YOUR HEALTH DAILY</string>
</resources>