<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".safety_guide.SafetyGuidelines">

    <TextView
        android:id="@+id/wear_mask"
        style="@style/font_header"
        android:layout_width="164dp"
        android:layout_height="0dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/rounded_img_btn"
        android:ems="10"
        android:paddingStart="8dp"
        android:paddingTop="16dp"
        android:paddingEnd="8dp"
        android:paddingBottom="16dp"
        android:text="@string/wear_mask"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/social_distancing"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/social_distancing"
        style="@style/font_header"
        android:layout_width="164dp"
        android:layout_height="0dp"
        android:background="@drawable/rounded_img_btn"
        android:ems="10"
        android:paddingStart="8dp"
        android:paddingTop="16dp"
        android:paddingEnd="8dp"
        android:paddingBottom="16dp"
        android:text="@string/social_distancing"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/wear_mask"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/wear_mask"
        app:layout_constraintTop_toTopOf="@+id/wear_mask" />

    <TextView
        android:id="@+id/wash_hand"
        style="@style/font_header"
        android:layout_width="164dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_img_btn"
        android:ems="10"
        android:fontFamily="@font/playfair_display_bold"
        android:paddingStart="8dp"
        android:paddingTop="16dp"
        android:paddingEnd="8dp"
        android:paddingBottom="16dp"
        android:text="@string/wash_hand"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/wear_mask"
        app:layout_constraintStart_toStartOf="@+id/wear_mask"
        app:layout_constraintTop_toBottomOf="@+id/wear_mask" />

    <TextView
        android:id="@+id/cover_coughs"
        style="@style/font_header"
        android:layout_width="164dp"
        android:layout_height="0dp"
        android:background="@drawable/rounded_img_btn"
        android:ems="10"
        android:paddingStart="8dp"
        android:paddingTop="16dp"
        android:paddingEnd="8dp"
        android:paddingBottom="16dp"
        android:text="@string/cover_coughs"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/wash_hand"
        app:layout_constraintEnd_toEndOf="@+id/social_distancing"
        app:layout_constraintStart_toStartOf="@+id/social_distancing"
        app:layout_constraintTop_toTopOf="@+id/wash_hand" />

    <TextView
        android:id="@+id/clean_and_disinfect"
        style="@style/font_header"
        android:layout_width="164dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_img_btn"
        android:ems="10"
        android:paddingStart="8dp"
        android:paddingTop="16dp"
        android:paddingEnd="8dp"
        android:paddingBottom="16dp"
        android:text="@string/good_hygiene"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/wash_hand"
        app:layout_constraintStart_toStartOf="@+id/wash_hand"
        app:layout_constraintTop_toBottomOf="@id/wash_hand" />

    <TextView
        android:id="@+id/monitor_health"
        style="@style/font_header"
        android:layout_width="164dp"
        android:layout_height="0dp"
        android:background="@drawable/rounded_img_btn"
        android:ems="10"
        android:fontFamily="@font/playfair_display_bold"
        android:paddingStart="8dp"
        android:paddingTop="16dp"
        android:paddingEnd="8dp"
        android:paddingBottom="16dp"
        android:text="@string/monitor_health"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/clean_and_disinfect"
        app:layout_constraintEnd_toEndOf="@+id/cover_coughs"
        app:layout_constraintStart_toStartOf="@+id/cover_coughs"
        app:layout_constraintTop_toTopOf="@+id/clean_and_disinfect" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:visibility="gone"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-3940256099942544/6300978111"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>