<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_blue"
    tools:context=".MainFragment">

    <TextView
        android:id="@+id/textViewMain"
        style="@android:style/Widget.TextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/app_blue"
        android:fontFamily="@font/playfair_display_bold"
        android:paddingStart="2dp"
        android:paddingEnd="2dp"
        android:text="@string/headline"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@color/app_blue2"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adViewMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-3940256099942544/6300978111"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/take_test"
        android:layout_width="164dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/rounded_img_btn"
        android:ems="10"
        android:fontFamily="@font/playfair_display_bold"
        android:paddingStart="4dp"
        android:paddingTop="16dp"
        android:paddingEnd="4dp"
        android:paddingBottom="16dp"
        android:text="@string/take_test_button"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/view_safety_tips"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMain" />

    <TextView
        android:id="@+id/pastRecordBtn"
        android:layout_width="164dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="228dp"
        android:background="@drawable/rounded_img_btn"
        android:ems="10"
        android:fontFamily="@font/playfair_display_bold"
        android:paddingStart="4dp"
        android:paddingTop="16dp"
        android:paddingEnd="4dp"
        android:paddingBottom="16dp"
        android:text="@string/test_record_btn"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/take_test" />

    <TextView
        android:id="@+id/currentStatBtn"
        android:layout_width="164dp"
        android:layout_height="0dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/rounded_img_btn"
        android:ems="10"
        android:fontFamily="@font/playfair_display_bold"
        android:paddingStart="4dp"
        android:paddingTop="16dp"
        android:paddingEnd="4dp"
        android:paddingBottom="16dp"
        android:text="@string/online_statistics"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/pastRecordBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/pastRecordBtn" />

    <TextView
        android:id="@+id/view_safety_tips"
        android:layout_width="164dp"
        android:layout_height="0dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/rounded_img_btn"
        android:ems="10"
        android:fontFamily="@font/playfair_display_bold"
        android:paddingStart="4dp"
        android:paddingTop="16dp"
        android:paddingEnd="4dp"
        android:paddingBottom="16dp"
        android:text="@string/safety_guide_btn"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/take_test"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/take_test" />

</androidx.constraintlayout.widget.ConstraintLayout>