<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/coro_virus1"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        style="@android:style/Widget.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/headline"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/takeTestButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_btn"
        android:onClick="launchTest"
        android:src="@drawable/covid_test1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/testRecordBtn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:background="@drawable/rounded_btn"
        android:onClick="launchTestRecords"
        android:text="@string/test_record_btn"
        android:textColor="@color/btn_text_color"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/takeTestButton"
        app:layout_constraintStart_toStartOf="@+id/takeTestButton"
        app:layout_constraintTop_toBottomOf="@+id/takeTestButton" />

    <Button
        android:id="@+id/currentStatBtn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_btn"
        android:onClick="viewWhoStats"
        android:text="@string/online_statistics"
        android:textColor="@color/btn_text_color"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/testRecordBtn"
        app:layout_constraintStart_toStartOf="@+id/testRecordBtn"
        app:layout_constraintTop_toBottomOf="@+id/testRecordBtn" />
</androidx.constraintlayout.widget.ConstraintLayout>